# tx_loadtester

./: .env  Cargo.toml  abc.py  airdroper.py  app.py  async_tester.py  balance.py  dotenv  generate_wallets.py  get_proxies.py  get_proxies_all.py  import json.py  load1.py  load2.py  load3.py  pickle_it.py  requirements.txt  sgd.py  test.txt  tester.py  wallets_1.pkl  wallets_2000.pkl  wallets_2800.pkl  wallets_4200.pkl  wallets_4800.pkl  wallets_9000.pkl  web3_utils.py  working_proxies.json  working_proxies_new.json
src/: main.rs
