[package]
name = "tx_loadtester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
web3 = "0.17.0"
ethers = { version = "2.0.14", features = ["legacy"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.11", features = ["socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hyper = { version = "0.14.28", features = ["full"] }
hyper-tls = "0.6.0"
surf = { version = "2.3.2" }
hyper-proxy = "0.9.1"